--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
 <body>
   <div class="background">
     <header>
-      <img src="imgs/PredictCan_Logo.png" alt="" class="logo">
+      <img src="PredictCan_Logo.png" alt="" class="logo">
       <ul>
         <li><a class="buttonA"  href="Home.html">Home</a></li>
         <li><a class="buttonA" id="selected" href="About.html">About</a></li>
